# fleet-monitor

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
data/: fleet_config.json
scripts/: render_demo_gif.py  run_simulator.py  seed_history.py  train_model.py
src/fleet_monitor/: __init__.py
src/fleet_monitor/alerting/: __init__.py  rules.py  telegram.py
src/fleet_monitor/dashboard/: __init__.py  app.py  data.py
src/fleet_monitor/dashboard/pages/: 1_Fleet_Overview.py  2_Device_Detail.py  3_ML_Predictions.py  4_Alert_History.py  5_Model_Performance.py
src/fleet_monitor/ml/: __init__.py  evaluate.py  features.py  predict.py  train.py
src/fleet_monitor/simulator/: __init__.py  device.py  fleet.py  profiles.py
src/fleet_monitor/storage/: __init__.py  store.py
tests/: test_alerts.py  test_simulator.py  test_storage.py
